--- a/docs/stl_lead_inequity.qmd
+++ b/docs/stl_lead_inequity.qmd
@@ -14,6 +14,16 @@ library(skimr)
 ```
 
 ```{r}
+rm(list = ls())
+
+stl_lead <- read.csv(here::here("data", "stl_blood_lead.csv"))
+stl_lead <- stl_lead |> 
+  clean_names()
+names(stl_lead)
+
+```
+
+```{r}
 # Read in Data
 stl_lead <- read.csv(here::here("data", "stl_blood_lead.csv"))
 
@@ -22,22 +32,64 @@ stl_lead <- stl_lead %>% clean_names()
 
 # Get Data Overview
 skimr::skim(stl_lead)
+dim(stl_lead)
+names(stl_lead)
 
 # Summary Statistics
 summary(stl_lead)
-
-ggplot(stl_lead, aes(x = , y = )) +
-  geom_histogram() +
-  labs(title = "Distribution of Blood Lead Levels",
-       x = "Blood Lead Level", y = "Count")
 ```
 
 ```{r}
 # Calculate proportion of white residents per census tract
-stl_lead_prop <- stl_lead %>%
+stl_lead_prop <- stl_lead |>
   mutate(prop_white = (white / total_pop) * 100)
+
+dim(stl_lead_prop)
+names(stl_lead_prop)
 
 # View first few rows
 head(stl_lead_prop)
+```
+
+```{r}
+# Create and store the scatter plot
+stl_lead_plot <- ggplot(stl_lead_prop, aes(x = prop_white, y = pct_elevated)) +
+  geom_point(alpha = 0.6, size = 2.8, color = "#2C7FB8") +
+  geom_smooth(method = "lm", se = FALSE, linewidth = 0.9, color = "#253494") +
+  labs(
+    title = "Elevated Blood Lead Levels vs. Percent White by Census Tract",
+    x = "Percent White (%)",
+    y = "Percent of Children with Elevated BLL (%)",
+    caption = "Line shows linear fit") +
+  theme_minimal()
+
+stl_lead_plot
+
+# Save a PNG to figs with 6x5 inches
+ggsave(here::here("figs", "stl_lead_scatter.png"),
+       plot = stl_lead_plot,
+       width = 6, height = 5)
+```
+
+```{r}
+# Create and store the histogram
+hist_plot <- ggplot(stl_lead_prop, aes(x = pct_elevated)) +
+  geom_histogram(binwidth = 1,
+                 fill = "magenta",
+                 color = "limegreen",
+                 linewidth = 1.2) +
+  labs(
+    title = "Distribution of Elevated Blood Lead Levels",
+    x = "Percent of Children with Elevated BLL",
+    y = "Number of Census Tracts") +
+  theme_minimal()
+
+hist_plot
+
+# Export the histogram as a JPG to figs
+ggsave(here::here("figs", "pct_elevated_hist.jpg"),
+       plot = hist_plot,
+       width = 7, height = 4.5, device = "jpeg")
+
 ```
 
